[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/conveyorbelt.gd" type="Script" id=1]
[ext_resource path="res://Sprites/tileGreen_03.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=3]
[ext_resource path="res://Scripts/StartGame.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Wall.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 880, 88 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 511.797, 43.8626 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11.6121, 72.904 )

[node name="World" type="Node"]
script = ExtResource( 4 )

[node name="ConveyorBelt" type="StaticBody2D" parent="."]
position = Vector2( 510.821, 276.449 )
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="ConveyorBelt"]
position = Vector2( 0, -1.52588e-05 )
scale = Vector2( 1.25, 1.25 )
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConveyorBelt"]
position = Vector2( 0, 1.52588e-05 )
shape = SubResource( 2 )

[node name="MailNode" type="Node" parent="."]

[node name="Wall" type="Area2D" parent="."]
position = Vector2( 1047.99, 148.136 )
collision_mask = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2( -45.4662, 0 )
scale = Vector2( 1.48, 1 )
shape = SubResource( 3 )

[node name="ScoreTracker" type="Node" parent="."]
script = ExtResource( 3 )

[node name="GoalScore" type="Label" parent="ScoreTracker"]
anchor_left = 0.012
anchor_top = 0.021
anchor_right = 0.034
anchor_bottom = 0.032
margin_left = 903.801
margin_top = -0.112971
margin_right = 981.273
margin_bottom = 7.28703
text = "Goal:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentScore" type="Label" parent="ScoreTracker"]
margin_left = 916.089
margin_top = 32.5365
margin_right = 1016.09
margin_bottom = 46.5365
text = "Current:"
__meta__ = {
"_edit_use_anchors_": false
}
